# sharing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  sharingdbusadaptor.cpp  sharingdbusadaptor.h
.github/workflows/: main.yml
src/: main.cpp  sharingdbusadaptor.cpp  sharingdbusadaptor.h
